--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.10.0",
     "react-router-hash-link": "^2.4.3",
-    "recharts": "^2.5.0"
+    "recharts": "^2.5.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
